# Tutel

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
ErrorHandlerModule/: ErrorHandler.py  ErrorType.py
Examples/: example_1.tut  example_2.tut  example_3.tut  example_4.tut  example_5.tut  sierpinski.tut  squere.tut
LexerModule/: Lexer.py  Source.py  Tokens.py  error_handler.py  lexer.py  tokens.py
ParserModule/: Classes.py  Parser.py  Program.py  Remapper.py
Tests/: __main__.py
Tests/InterpreterTests/: test_Interpreter.py
Tests/LexerTests/: test_Lexer.py
Tests/ParserTests/: test_Parser.py
Tutel/: __main__.py
Tutel/ErrorHandlerModule/: ErrorHandler.py  ErrorType.py
Tutel/GuiModule/: Gui.py  GuiInterface.py  GuiMock.py
Tutel/InterpreterModuler/: Interpreter.py  TutelBuiltins.py  Value.py  Variable.py
Tutel/InterpreterModuler/Turtle/: Color.py  Position.py  Turtle.py
Tutel/LexerModule/: Lexer.py  Tokens.py
Tutel/ParserModule/: Classes.py  Parser.py  Remapper.py
examples/: example_4.tut  sierpinski.tut  squere.tut
src/Tutel/: __init__.py  __main__.py
src/Tutel/common/: ErrorHandler.py  ErrorType.py  JsonSerializable.py  Utils.py
src/tutel/: Tutel.py  TutelDebugger.py  __init__.py  __main__.py  runner.py
src/tutelDebugger/: TutelDebugger.py  TutelDebuggerInteractive.py
test/: lexer_tests.py  test_Lexer.py  test_Parser.py
tests/: __main__.py
tests/DebuggerTests/: test_Debugger.py
tests/InterpreterTests/: test_Interpreter.py
tests/LexerTests/: test_Lexer.py
tests/ParserTests/: test_Parser.py
(+52 files in other folders)
