[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tutel"
version = "2.0.6"
authors = [
  { name="Bartosz Sosnowski", email="bartosz.sosnowski.pro@gmail.com" },
]
description = "An interpreter of Tutel language"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Lumiowolf/Tutel"
"Bug Tracker" = "https://github.com/Lumiowolf/Tutel/issues"