[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Tutel"
version = "2.3.6"
authors = [
  { name="Bartosz Sosnowski", email="bartosz.sosnowski.pro@gmail.com" },
]
description = "An interpreter of Tutel language"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "websockets~=11.0.3",
]

[project.urls]
"Homepage" = "https://github.com/Lumiowolf/Tutel"
"Bug Tracker" = "https://github.com/Lumiowolf/Tutel/issues"